@@ -71,9 +71,10 @@ announcemsg syntax.
 
 AS=\
 Command : AS\n\r\
-Usage   : AS [PLAYERNAME/MOBNAME]/(PORT X) (HERE) [COMMAND]\n\r\
+Usage   : AS [PLAYERNAME/MOBNAME]/(PORT X)/PLAYERS (HERE) [COMMAND]\n\r\
 Example : as "bob" inventory\n\r\
 Example : as bob here drop all\n\r\
+Example : as PLAYERS here drop all\n\r\
 Example : as bob cast fireball monster\n\r\
 Example : as port 2325 list users\n\r\
 Short(s): \n\r\
@@ -100,10 +101,11 @@ not to lock up all of your muds threads this way!
 
 AT=\
 Command : AT\n\r\
-Usage   : AT [ROOM ID/DESC/MOB/AREA] [COMMAND]\n\r\
+Usage   : AT [ROOM ID/DESC/MOB/AREA]/PLAYERS [COMMAND]\n\r\
 Example : at "the greasy pub" smile\n\r\
 Example : at Midgaard#3001 bow\n\r\
 Example : at bob cast fireball bob\n\r\
+Example : at players say hello all!\n\r\
 Short(s): \n\r\
 A command that allows one to issue other commands elsewhere in the \
 mud.
