@@ -37,6 +37,7 @@
  36. New Prayers: Empower Holy Weapon, Empower Unholy Weapon, Empower Sacred Weapon, Protect Sacred Item
  37. New Prayers: Imbue Holy Weapon, Imbue Unholy Weapon, Umbue Sacred Weapon, Imbue Just Weapon
  38. New Prayers: Imbue Foul Weapon, Imbue Modest Weapon
+ 39. The AS and AT commands now support PLAYERS to do things as or at all the players online.
  
 # Build 5.9.10 Release 6/16/2020
   1. Wands/etc have enchant type as a restriction, WandMaking/StaffMaking/Rodsmithing support.
